fix history text alignment

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -43,11 +43,20 @@ textarea {
 }
 
 .game-history {
-  margin-top: 20px;
-  height: 400px;
+  margin-top: 200px;
+  height: 280px;
   font-size: 2;
   text-align: center;
-  width: 100%;
+  overflow: auto;
+}
+
+.record-history {
+  margin-top: 5px;
+  padding-top: 5px;
+}
+
+.bordered {
+  border-top: 1px solid #eaeaea;
 }
 
 .game-results {
